[workspace]
members = [".", "build"]

[package]
name = "octorest"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/octorest"
homepage = "https://github.com/SOF3/octorest"
readme = "README.md"
description = "Generated GitHub API bindings"
build = "run-build.rs"

exclude = [
	"routes",
	"!routes/openapi/api.github.com"
]

[build-dependencies]
octorest-build = {version = "0.0.0", path = "build"}

[lib]
name = "octorest"

[features]
github-app = ["jsonwebtoken"]

dev = ["octorest-build/dev"]
latest = ["octorest-build/latest"]
online = ["octorest-build/online"]
internal-docsrs = []

gh-teams = []
gh-checks = []
gh-reactions = []
gh-markdown = []
gh-orgs = []
gh-issues = []
gh-pulls = []
gh-repos = []
gh-users = []
gh-actions = []
gh-projects = []
gh-activity = []
gh-migrations = []
gh-oauth-authorizations = []
gh-gists = []
gh-search = []
gh-interactions = []
gh-apps = []
gh-emojis = []
gh-codes-of-conduct = []
gh-scim = []
gh-licenses = []
gh-git = []
gh-rate-limit = []
gh-gitignore = []
gh-meta = []
gh-code-scanning = []

default = [
	"github-app",

	"gh-teams",
	"gh-checks",
	"gh-reactions",
	"gh-markdown",
	"gh-orgs",
	"gh-issues",
	"gh-pulls",
	"gh-repos",
	"gh-users",
	"gh-actions",
	"gh-projects",
	"gh-activity",
	"gh-migrations",
	"gh-oauth-authorizations",
	"gh-gists",
	"gh-search",
	"gh-interactions",
	"gh-apps",
	"gh-emojis",
	"gh-codes-of-conduct",
	"gh-scim",
	"gh-licenses",
	"gh-git",
	"gh-rate-limit",
	"gh-gitignore",
	"gh-meta",
	"gh-code-scanning",
]

[dependencies]
futures = "0.3.5"
getset = "0.1.1"
serde_json = "1.0.55"
snafu = "0.6.8"
chrono = "0.4.13"

[dependencies.jsonwebtoken]
version = "7.1.0"
optional = true

[dependencies.reqwest]
version = "0.10.6"
features = ["json"]

[dependencies.serde]
version = "1.0.111"
features = ["derive"]

[package.metadata.docs.rs]
features = ["internal-docsrs"]
