[package]
name = "octorest-abstract"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/octorest.git"
homepage = "https://github.com/SOF3/octorest"
include = ["latest.json"]

[dependencies]
async-trait = "0.1.11"

[badges]
travis-ci = {repository = "SOF3/octorest"}
